--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@rive-app/canvas": "^1.1.6"
+    "@rive-app/canvas": "^1.1.6",
+    "@rive-app/webgl": "^1.1.6",
+    "requirejs": "^2.3.6"
   }
 }
